<?xml version="1.0"?>
<package>
  <name>industrial_extrinsic_cal</name>
  <version>0.1.0</version>
  <description>
    Extrinsic calibration.
  </description>
  <author email="clewis@swri.org">Chris Lewis</author>
  <maintainer email="clewis@swri.org">Chris Lewis</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://wiki.ros.org/industrial_extrinsic_cal</url>
  <url type="bugtracker">https://github.com/ros-industrial/industrial_calibration/issues</url>
  <url type="repository">https://github.com/ros-industrial/industrial_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>motoman_driver</run_depend>
  <run_depend>motoman_sia20d_support</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <test_depend>rosunit</test_depend>
</package>
