<?xml version="1.0"?>
<package>
  <name>intrinsic_cal</name>
  <version>0.1.0</version>
  <description>
    Intrinsic calibration.
  </description>
  <author email="clewis@swri.org">Chris Lewis</author>
  <maintainer email="clewis@swri.org">Chris Lewis</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://wiki.ros.org/intrinsic_cal</url>
  <url type="bugtracker">https://github.com/ros-industrial/industrial_calibration/issues</url>
  <url type="repository">https://github.com/ros-industrial/industrial_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>industrial_extrinsic_cal</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>industrial_extrinsic_cal</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
