<?xml version="1.0"?>
<package format="2">
  <name>intrinsic_cal</name>
  <version>0.1.0</version>
  <description>
    Intrinsic calibration.
  </description>
  <author email="clewis@swri.org">Chris Lewis</author>
  <maintainer email="clewis@swri.org">Chris Lewis</maintainer>
  <maintainer email="Austin.Deric@gmail.com">AustinDeric</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://wiki.ros.org/intrinsic_cal</url>
  <url type="bugtracker">https://github.com/ros-industrial/industrial_calibration/issues</url>
  <url type="repository">https://github.com/ros-industrial/industrial_calibration</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>industrial_extrinsic_cal</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ceres-solver</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>robo_cylinder</build_depend>

  <exec_depend>image_view</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
